# APAFlow

./: .env.example  .env.prod.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  GLOBAL_PLATFORM_CAPABILITIES.md  LICENSE  README.dev.md  README.md  SMEFlow_Platform_Design_Document.md  SOCIAL_MEDIA_INTEGRATIONS.md  TASK.md  TENANT_ONBOARDING.md  UI-003_IMPLEMENTATION_SUMMARY.md  WHITE_LABEL_UI.md  WORKFLOW_TEMPLATES_SYSTEM.md  alembic.ini  applicants  codeql-config.yml  docker-compose.cerbos.yml  docker-compose.dev.yml  docker-compose.keycloak.yml  docker-compose.prod.yml  docker-compose.yml  fix_custom_nodes.py  infrastructure_validation_report.json  langfuse_config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sme-flow-prompts.md  test_n8n_core.py  test_n8n_simple.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: codeql.yml
.windsurf/rules/: smeflow-rules-guide.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_template_versioning.py  003_add_n8n_credentials_table.py
cerbos/config/: cerbos.yaml
cerbos/policies/: _schemas.yaml  agent_resources.yaml  tenant_isolation.yaml  tenant_roles.yaml  workflow_resources.yaml
config/: livekit.yaml
docs/: INFRASTRUCTURE_CHECKLIST.md  SECRETS_MANAGEMENT.md
examples/: simple_workflow_example.py
flowise/: FLOWISE_INTEGRATION.md  README.md
flowise/config/: flowise-config.json  startup.js
flowise/custom-nodes/: README.md  SMEFlowAfricanIntegrations.js  SMEFlowAgent.js  SMEFlowAutomator.js  SMEFlowTenantManager.js  index.js  package.json
flowise/docker/: Dockerfile.flowise  Dockerfile.flowise.simple
flowise/middleware/: tenant-isolation.js
k8s/: deployment.yaml
langgraph_resources/: Human-in-the-loop-LangGraph.md  call-tools.md  persistence.md  subgraphs.md
langgraph_resources/multi-agent/: building-multi-agent-system.md  multi-agent-systems.md
nginx/: nginx.conf
scripts/: init-db.sql  setup-dev.ps1  ssl-setup.sh  validate-infrastructure-advanced.py  validate-infrastructure.py
security/: cerbos-policy.py  keycloak-security.py
signoz/: otel-collector-config.yaml  prometheus.yml
smeflow/: __init__.py  __main__.py  main.py
smeflow/agents/: __init__.py  automator.py  base.py  factory.py  llm_manager.py  llm_providers.py  manager.py  mentor.py  persistence.py  supervisor.py
smeflow/api/: __init__.py  agent_routes.py  branding_routes.py  flowise_integration_routes.py  langgraph_workflow_routes.py  n8n_routes.py  routes.py  workflow_routes.py
smeflow/auth/: __init__.py  authorization_middleware.py  cerbos_client.py  jwt_middleware.py  keycloak_client.py  security_middleware.py  tenant_auth.py
smeflow/core/: __init__.py  cache.py  config.py  logging.py
smeflow/database/: __init__.py  connection.py  models.py
tests/: __init__.py  test_agent_manager_llm.py  test_agent_persistence.py  test_agents.py  test_api_security.py  test_auth.py  test_authorization_integration.py  test_cache.py  test_cerbos.py  test_compliance_workflows.py  test_erp_workflows.py  test_flowise_integration.py  test_llm_manager.py  test_llm_models.py  test_main.py  test_marketing_campaigns_template.py  test_n8n_african_integrations.py  test_n8n_communication_integrations.py  test_n8n_health_check.py  test_n8n_integration.py  test_n8n_phase2_integration.py  test_product_recommender_template.py  test_social_media_nodes.py  test_social_media_scheduling.py  test_template_versioning.py  test_tenant_social_media_config.py  test_white_label_ui.py  test_workflow_engine.py  test_workflow_manager.py  test_workflow_selfhealing.py
(+62 files in other folders)
